Fix a bug: the slide navigation was behind the masthead

--- a/css-src/slide-deck.css
+++ b/css-src/slide-deck.css
@@ -34,6 +34,7 @@
   bottom: -3rem;
   right: 0;
   width: 100%;
+  z-index: 1100;
 
   text-align: center;
 }
